@@ -38,7 +38,7 @@
 =Parameter	bold blue
 =Keyword	bold
 =Color		yellow
-=StandardColor	bold yellow
+=StandardColor	bold
 =State
 =Subr		magenta
 =Literal	cyan
