@@ -5,7 +5,6 @@
 =Keyword 	bold
 =Mathmode 	cyan
 =Brace		magenta
-=Umlaut		bold yellow
 =Parameter	bold blue
 
 :idle Idle
@@ -14,7 +13,6 @@
 	"$"		math		recolor=-1
 	"\\"		command		recolor=-1
 	"{[]}"		brace		recolor=-1
-	"\""		umlaut		recolor=-1
 	"#"		parameter	recolor=-1
 
 :comment Comment
@@ -52,6 +50,3 @@
 
 :math_brace Brace
 	*		math		noeat
-
-:umlaut Umlaut
-	*		idle
